[gd_scene load_steps=18 format=3 uid="uid://cmxvrvtkghl04"]

[ext_resource type="Script" uid="uid://53o36xmor827" path="res://content/enemy/sliz/enemy_sliz.gd" id="1_ssju7"]
[ext_resource type="Texture2D" uid="uid://nrhbtq57fgsl" path="res://assets/sprites/enemy/sliz.png" id="1_w2n7g"]
[ext_resource type="Script" uid="uid://cvdxyomux8pmi" path="res://content/component/health.gd" id="2_7aqgi"]
[ext_resource type="Script" uid="uid://ctehqaw3flkxh" path="res://content/component/beat_fader.gd" id="3_b8itv"]
[ext_resource type="Script" uid="uid://ndo4d4agq3vk" path="res://content/component/pulse_3d.gd" id="3_xb7i7"]
[ext_resource type="Texture2D" uid="uid://bdlqyyqt7piko" path="res://assets/sprites/pulse.png" id="5_1ehr1"]
[ext_resource type="Script" uid="uid://c2ndi6ftfs5m4" path="res://content/component/musical_audio_3d.gd" id="6_monnn"]
[ext_resource type="AudioStream" uid="uid://q5blx2blwq7t" path="res://__external/SFX/PHIAL_SFX_ENEMY/untitled_SLIZ_SHOOT.wav" id="7_dufm4"]
[ext_resource type="Script" uid="uid://bog6bqfmnioad" path="res://multi_scripts/hit_box.gd" id="9_1qq75"]
[ext_resource type="Script" uid="uid://5t0i5fcvv63q" path="res://content/component/hit_effect.gd" id="10_dufm4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dufm4"]
atlas = ExtResource("1_w2n7g")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssju7"]
atlas = ExtResource("1_w2n7g")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb7i7"]
atlas = ExtResource("1_w2n7g")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8itv"]
atlas = ExtResource("1_w2n7g")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ehr1"]
atlas = ExtResource("1_w2n7g")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_monnn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dufm4")
}],
"loop": true,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssju7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xb7i7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8itv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ehr1")
}],
"loop": false,
"name": &"Pulse",
"speed": 12.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dufm4"]
radius = 0.74121094
height = 2.4814453

[node name="EnemySliz" type="Node3D"]
script = ExtResource("1_ssju7")

[node name="Health" type="Node" parent="."]
script = ExtResource("2_7aqgi")
current_health = 30.0

[node name="Animation" type="AnimatedSprite3D" parent="."]
offset = Vector2(0, 32)
pixel_size = 0.05
billboard = 2
alpha_cut = 2
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_monnn")
animation = &"Pulse"

[node name="BeatFader" type="Node3D" parent="." node_paths=PackedStringArray("to_fade")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.225235, 0)
script = ExtResource("3_b8itv")
to_fade = NodePath("BeatPulser/Sprite3D")
auto = false
fade_speed = 8.0

[node name="BeatPulser" type="Node3D" parent="BeatFader"]
script = ExtResource("3_xb7i7")
auto = false
strength = 0.5
shrink_speed = 2.0
metadata/_custom_type_script = "uid://ndo4d4agq3vk"

[node name="Sprite3D" type="Sprite3D" parent="BeatFader/BeatPulser"]
transform = Transform3D(2.2544749, 0, 0, 0, 2.2544749, 0, 0, 0, 2.2544749, 0, 0, 0)
pixel_size = 0.05
billboard = 1
texture_filter = 0
texture = ExtResource("5_1ehr1")

[node name="ShootPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3673115, 0)

[node name="SFX" type="Node3D" parent="."]

[node name="Shoot" type="AudioStreamPlayer3D" parent="SFX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4038804, 0)
stream = ExtResource("7_dufm4")
volume_db = 0.2
unit_size = 5.0
bus = &"SFX"
script = ExtResource("6_monnn")

[node name="HitBox" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("9_1qq75")
metadata/_custom_type_script = "uid://bog6bqfmnioad"

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2149764, 0)
shape = SubResource("CapsuleShape3D_dufm4")
debug_color = Color(0.61, 0.5388333, 0, 0.654902)

[node name="HitEffect" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2008255, 0)
pixel_size = 0.05
shaded = true
script = ExtResource("10_dufm4")
metadata/_custom_type_script = "uid://5t0i5fcvv63q"

[connection signal="beat_action" from="." to="BeatFader" method="do_fade"]
[connection signal="beat_action" from="." to="BeatFader/BeatPulser" method="pulse"]
[connection signal="on_damaged_zero" from="Health" to="." method="kill"]
[connection signal="hit" from="HitBox" to="." method="on_hit"]
[connection signal="hit" from="HitBox" to="HitEffect" method="do_effect"]
